--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@ __pycache__
 datasets/pubmed*
 datasets/arxiv*
 eval_hyp/*
+!eval_hyp/
 pred_content_plan/*
+!pred_content_plan/
 pretrained_embeddings/*
 pretrained_models/*
 temp/*
